# nogpl

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
nogpl/cli/: cli.py
tests/: test_nogpl.py
tests/cli/: test_cli.py
