[tool.poetry]
name = "nogpl"
version = "0.1.0"
description = ""
authors = ["Joseph Egan <joseph.s.egan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"
toml = "^0.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
isort = "^5.0.5"
black = "^19.10b0"

[tool.black]
line_length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
